.. Author notes: this file is formatted with restructured text
(http://docutils.sourceforge.net/docs/user/rst/quickstart.html).
The changelog style is adapted from Apache Lucene.

Note that ``PHAB_ID=#`` and ``RB_ID=#`` correspond to associated messages in commits.

Unreleased

Runtime Behavior Changes:

  * util-stats: Alphabetically sort stats printed to the given `PrintStream` in the
    `c.t.finagle.stats.InMemoryStatsReceiver#print(PrintStream)` function.

    To include stats headers which provide better visual separation for the different
    types of stats being printedm, set `includeHeaders` to true. E.g.,
    ```
    InMemoryStatsReceiver#print(PrintStream, includeHeaders = true)
    ```
    ``PHAB_ID=D144091``

18.3.0  2018-03-05

Runtime Behavior Changes:

  * util-app: Ensure that any flag parsing error reason is written to `System.err`
    before attempting to print flag usage. In the event that collecting flags for
    the printing the usage message fails, users will still receive a useful message
    as to why flag parsing failed. ``PHAB_ID=D137629``

  * util-core: Promises/Futures now use LIFO execution order for their callbacks
    (was depth-based algorithm before).  ``PHAB_ID=D135407``

  * util-core: Wrap the function passed to `Closable.make` in a try/catch and return
    a `Future.exception` over any NonFatal exception. ``PHAB_ID=D142086``

Deprecations:

  * util-core: RichU64* APIs are deprecated. Use Java 8 Unsigned Long API instead:
    ``PHAB_ID=D137893``

    - `new RichU64String("123").toU64Long` -> `Long.parseUnsignedInt`
    - `new RichU64Long(123L).toU64HexString` -> `Long.toHexString` (no leading zeros)

18.2.0  2018-02-05

New Features:

  * util-core: Added implicit conversion for percentage specified as "x.percent"
    to a fractional Double in `c.t.conversions.percent`. ``PHAB_ID=D128792``

  * util-tunable: Add deserializer for `c.t.u.StorageUnit` to JsonTunableMapper
    ``PHAB_ID=D132368``

Runtime Behavior Changes:
