@@ -1,5 +1,6 @@
 package com.twitter.util
 
+import com.twitter.conversions.time._
 import org.junit.runner.RunWith
 import org.scalatest.FunSuite
 import org.scalatest.junit.JUnitRunner
@@ -12,6 +13,12 @@ class CloseAwaitablyTest extends FunSuite {
     def close(deadline: Time): Future[Unit] = closeAwaitably {
       n += 1
       p
+    }
+  }
+
+  class TestClosable(f: () => Future[Unit]) extends Closable with CloseAwaitably {
+    def close(deadline: Time): Future[Unit] = closeAwaitably {
+      f()
     }
   }
 
@@ -44,5 +51,34 @@ class CloseAwaitablyTest extends FunSuite {
     c.p.setDone()
     t.join(10000)
     assert(!t.isAlive)
+  }
+
+  test("close awaitably with error") {
+    val message = "FORCED EXCEPTION"
+    val closeFn: () => Future[Unit] = { () =>
+      throw new Exception(message)
+    }
+
+    val testClosable = new TestClosable(closeFn)
+    val f = testClosable.close(Time.now)
+    // call again -- should not error and should return same computed f
+    assert(testClosable.close(Time.now) == f)
+    val e = intercept[Exception] {
+      Await.result(f, 1.second)
+    }
+    assert(e.getMessage == message)
+  }
+
+  test("close awaitably with fatal error, fatal error blows up close()") {
+    val message = "FORCED INTERRUPTED EXCEPTION"
+    val closeFn: () => Future[Unit] = { () =>
+      throw new InterruptedException(message)
+    }
+
+    val testClosable = new TestClosable(closeFn)
+    val e = intercept[InterruptedException] {
+      testClosable.close(Time.now)
+    }
+    assert(e.getMessage == message)
   }
 }
